[package]
name = "oxidebot"
version = "0.1.4"
edition = "2021"
description = "A lightweight yet powerful chatbot framework"
license = "MIT OR Apache-2.0"
authors = ["canxin121 <q1969730106@gmail.com>"]
homepage = "https://github.com/canxin121/oxidebot"
repository = "https://github.com/canxin121/oxidebot"
readme = "Readme.md"
keywords = ["bot", "chatbot", "oxidebot"]
categories = ["science::robotics", "api-bindings"]

[dependencies]
anyhow = "1.0.87"
async-trait = "0.1.82"
chrono = "0.4.38"
hyper = "1.4.1"
mime = "0.3.17"
mime_guess = "2.0.5"
reqwest = { version = "0.12.7", default-features = false, features = [
    "rustls-tls",
] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
url = "2.5.2"
